Fixed gap from article.

--- a/src/style/Desktop.scss
+++ b/src/style/Desktop.scss
@@ -22,7 +22,7 @@
         article {
             display: flex;
             align-items: center;
-            gap: 0rem;
+            gap: 3rem;
 
             #text {
                 text-align: left;
